Generate version paymentserivcejava-0.7.0.jar without any bugs for SRE Workshop and Copied paymentserivcejava-0.6.1.jar to  paymentserivcejava-0.67.1.jar